--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,2 +1,20 @@
-// @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
+body,html{
+  background: #f0f2f5;
+}
+/* home */
+.jumbotron{
+  text-align: center;
+  background: #fff;
+}
+/* footer */
+._footer{
+  padding: 10px;
+  padding-top: 15px;
+  margin-bottom: 0;
+}
+._footer p{
+  font-size: 12px;
+  margin-bottom: 5px;
+}
