finish user signup

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5748,4 +5748,23 @@ body, html {
   font-size: 12px;
   margin-bottom: 5px; }
 
+/* user show */
+.users-show {
+  margin-bottom: 10px; }
+
+.users-show .head-left img {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%; }
+
+.users-show .head-right h1 {
+  margin-top: 0; }
+
+.users-show .head-right small {
+  font-size: 1em;
+  color: #888; }
+
+.users-show .head-right b {
+  color: #00B5AD; }
+
 /*# sourceMappingURL=app.css.map */
