finish login-in and log-pit

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5767,4 +5767,10 @@ body, html {
 .users-show .head-right b {
   color: #00B5AD; }
 
+/*  header  */
+#logout {
+  cursor: default; }
+  #logout:hover {
+    background: transparent; }
+
 /*# sourceMappingURL=app.css.map */
