--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4344,13 +4344,13 @@ a.thumbnail.active {
   .alert-success .alert-link {
     color: #2b542c; }
 
-.alert-info {
+.alert-info, .alert-status {
   background-color: #d9edf7;
   border-color: #bce8f1;
   color: #31708f; }
-  .alert-info hr {
+  .alert-info hr, .alert-status hr {
     border-top-color: #a6e1ec; }
-  .alert-info .alert-link {
+  .alert-info .alert-link, .alert-status .alert-link {
     color: #245269; }
 
 .alert-warning {
@@ -5740,6 +5740,9 @@ body, html {
 .offset-left-1 {
   margin-left: 10px; }
 
+.form-group {
+  overflow: auto; }
+
 /* home */
 .jumbotron {
   text-align: center;
@@ -5819,5 +5822,7 @@ body, html {
   float: right;
   position: relative;
   right: 0; }
+
+/*  重置密码  */
 
 /*# sourceMappingURL=app.css.map */
