--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -18,6 +18,9 @@ body,html{
 .form-group{
   overflow: auto;
 }
+.content-right{
+  text-align: right;
+}
 
 /* home */
 .jumbotron{
@@ -38,18 +41,49 @@ body,html{
 /* user show */
 .users-show{
   margin-bottom: 10px;
+  .user-head{
+    padding: 15px;
+    padding-top: 0;
+    .head-body{
+      border-radius: 4px;
+      background: #fff;
+      padding: 10px;
+      overflow: auto;
+      text-align: center;
+    }
+    .status_form{
+      padding: 20px 10px;
+      border-radius: 4px;
+      background: #fff;
+      margin: 10px 0;
+    }
+  }
   .head-left{
-    text-align: center;
+    text-align: left;
+    padding: 8px;
+    padding-left: 0;
+    display: inline-block;
     img{
-      width: 120px;
-      height: 120px;
+      width: 100px;
+      height: auto;
       border-radius: 50%;
+      max-width: 100%;
     }
   }
   .head-right{
-    text-align: center;
+    text-align: left;
+    padding: 0;
+    padding-left: 6px;
+    padding-top: 8px;
+    display: inline-block;
+    vertical-align: middle;
     h1{
       margin-top: 0;
+      word-break: break-all;
+      font-size: 16px;
+    }
+    p{
+      margin-bottom: 0;
     }
     small{
       font-size: 1em;
@@ -86,6 +120,10 @@ body,html{
 
 /*  所有用户  */
 .users {
+  background: #fff;
+  border-radius: 4px;
+  padding: 15px;
+  margin-bottom: 20px;
   h1{
     text-align: center;
   }
@@ -125,3 +163,42 @@ body,html{
 
 }
 
+/*  微博展示  */
+.statuses{
+  list-style: none;
+  margin-left: 0;
+  padding-left: 0;
+  li{
+    position: relative;
+    padding: 15px 0;
+    border-bottom: 1px solid $gray-line;
+    &:last-child{
+      border-bottom: none;
+    }
+    .gravatar{
+      vertical-align: top;
+      position: absolute;
+      width: 40px;
+      height: 40px;
+    }
+    .user{
+      vertical-align: top;
+      margin-left: 50px;
+    }
+    .timestamp{
+      display: block;
+      margin-left: 50px;
+    }
+    .content{
+      display: block;
+      margin-left: 50px;
+    }
+  }
+
+}
+/*  首页微博  */
+.status-list{
+  background: #fff;
+  padding: 15px 20px;
+  margin: 20px 0;
+}
